--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Of Siddhant Pol - Software Developer</title>
+    <title>About Siddhant Pol - Software Developer</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <!-- Add Bootstrap CSS link -->
@@ -19,12 +19,14 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbarNav">
-                    <ul class="navbar-nav justify-content-end">
+                    <!-- Align items to the right on small screens -->
+                    <ul class="navbar-nav ml-auto justify-content-end">
+                        <!-- Added ml-auto class and justify-content-end class -->
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link active" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Services</a>
@@ -39,22 +41,18 @@
                 </div>
             </div>
         </nav>
-
     </header>
     <section class="home">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-1">
                     <div class="home-content">
-                        <h1>Hi, I'm Siddhant Pol</h1>
+                        <h1>About Me</h1>
                         <h3>Software Developer</h3>
-                        <p>Software Developer with a passion for creating cutting-edge applications and a focus on results. Proficient in Java, JavaScript, C#, and front-end development. Knowledgeable about using effective and clean coding practises to convert complex requirements into workable solutions. Strong analytical and problem-solving skills; good at identifying and fixing problems. Excellent communicator who works cooperatively with cross-functional teams to deliver software projects of the highest calibre. Exploring new methodologies and technologies constantly to promote innovation and improve results. Committed to providing user-centric, scalable, and maintainable software solutions.</p>
-                        <div class="btn-box">
-                            <a href="#" class="btn btn-primary">Hire Me</a>
-                            <a href="#" class="btn btn-secondary">Let's Talk</a>
-                        </div>
+                        <p>I am a passionate software developer with a focus on creating cutting-edge applications. My skills include Java, JavaScript, C#, and front-end development. I am dedicated to using clean coding practices to transform complex requirements into effective solutions. With strong analytical and problem-solving abilities, I excel at identifying and resolving issues. As an excellent communicator, I collaborate seamlessly with cross-functional teams to deliver top-notch software projects. I am constantly exploring new methodologies and technologies to drive innovation and enhance outcomes. My commitment lies in providing user-centric, scalable, and maintainable software solutions.</p>
                     </div>
                 </div>
+                
             </div>
         </div>
     </section>
