--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,125 @@
         <br>
     </header>
 
+
+
+
+
+
+    <!--<section class="home">
+        <div class="container" style="color: aliceblue">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <br><br>
+                    <h2 class="text-center mt-5">SIDDHANT POL</h2>
+                    <p class="text-center">Mumbai, India | +91-8898666595 | siddhant.pol124@gmail.com</p>-->
+    <!-- ... (other content) ... -->
+    <!--<div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <h3 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Education
+                </button>
+            </h3>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">-->
+    <!-- Your Education content here -->
+    <!--</div>
+        </div>
+    </div>-->
+    <!-- Repeat similar structure for other sections -->
+    <!--</div>
+                </div>
+            </div>
+        </div>
+    </section>-->
+
+
+
+
+
     <section class="home">
+        <div class="container" style="color: aliceblue">
+            <div class="container" style="color: aliceblue">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <br><br>
+                        <h2 class="text-center mt-5">SIDDHANT POL</h2>
+                        <p class="text-center">Mumbai, India | +91-8898666595 | siddhant.pol124@gmail.com</p>
+
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEducation" aria-expanded="false" aria-controls="collapseEducation">
+                                        Education
+                                    </button>
+                                </h3>
+                                <div id="collapseEducation" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <!-- Education content goes here -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Copy and paste the content from the second row here -->
+                        <div class="accordion" id="accordionExample2">
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingTwo">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProjects" aria-expanded="false" aria-controls="collapseProjects">
+                                        Significant Projects
+                                    </button>
+                                </h3>
+                                <div id="collapseProjects" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample2">
+                                    <div class="accordion-body">
+                                        <!-- Projects content goes here -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <!--<div class="row">-->
+                    <div class="accordion" id="accordionExample3">
+                        <div class="accordion-item">
+                            <h3 class="accordion-header" id="headingThree">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
+                                    Technical And Interpersonal Skills
+                                </button>
+                            </h3>
+                            <div id="collapseSkills" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample3">
+                                <div class="accordion-body">
+                                    <!-- Skills content goes here -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <!--</div>-->
+                <!--<div class="row">-->
+                    <div class="accordion" id="accordionExample4">
+                        <div class="accordion-item">
+                            <h3 class="accordion-header" id="headingFour">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCertification" aria-expanded="false" aria-controls="collapseCertification">
+                                    Certification And Courses
+                                </button>
+                            </h3>
+                            <div id="collapseCertification" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample4">
+                                <div class="accordion-body">
+                                    <!-- Certification content goes here -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+    <!--<section class="home">
         <div class="container " style="color:aliceblue">
             <div class="row">
                 <div class="col-md-8 offset-md-2">
@@ -60,8 +178,8 @@
                         <ul class="dropdown-menu">
                             <li>
                                 <p>
-                                <strong>Bachelor of Engineering in Computer Science</strong> 
-                                (Ramrao Adik Institute of Technology, Navi Mumbai) | Jun 2018 - Apr 2022<br>Mumbai University | Average CGPA: 7.23/10 GPA
+                                    <strong>Bachelor of Engineering in Computer Science</strong>
+                                    (Ramrao Adik Institute of Technology, Navi Mumbai) | Jun 2018 - Apr 2022<br>Mumbai University | Average CGPA: 7.23/10 GPA
                                 </p>
                             </li>
                             <li>
@@ -114,7 +232,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
