--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio Of Siddhant Pol - Software Developer</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <!-- Add Bootstrap CSS link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -22,7 +22,6 @@
                 </button>
                 <div class="collapse navbar-collapse " id="navbarNav">
                     <ul class="navbar-nav ml-auto">
-                        <!-- Align the nav links to the right -->
                         <li class="nav-item">
                             <a class="nav-link active" href="#">Home</a>
                         </li>
@@ -48,7 +47,7 @@
                     <div class="home-content">
                         <h1>Hi, I'm Siddhant Pol</h1>
                         <h3>Software Developer</h3>
-                        <p>Software Developer with a passion for creating cutting-edge applications and a focus on results. Proficient in Java, JavaScript, C#, and front-end development. Knowledgeable about using effective and clean coding practises to convert complex requirements into workable solutions. Strong analytical and problem-solving skills; good at identifying and fixing problems. Excellent communicator who works cooperatively with cross-functional teams to deliver software projects of the highest calibre. Exploring new methodologies and technologies constantly to promote innovation and improve results. Committed to providing user-centric, scalable, and maintainable software solutions.</p>
+                        <p>Software Developer with a passion for creating cutting-edge applications and a focus on results. Proficient in Java, JavaScript, C#, and front-end development. Knowledgeable about using effective and clean coding practices to convert complex requirements into workable solutions. Strong analytical and problem-solving skills; good at identifying and fixing problems. Excellent communicator who works cooperatively with cross-functional teams to deliver software projects of the highest caliber. Exploring new methodologies and technologies constantly to promote innovation and improve results. Committed to providing user-centric, scalable, and maintainable software solutions.</p>
                         <div class="btn-box">
                             <a href="#" class="btn btn-primary">Hire Me</a>
                             <a href="#" class="btn btn-secondary">Let's Talk</a>
