--- a/resume.html
+++ b/resume.html
@@ -12,78 +12,41 @@
 </head>
 <body>
     <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-xl navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Siddhant.</a>
+                <div class="navbar-brand">
+                    <a href="index.html">Portfolio.</a>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbarNav">
-                    <!-- Align items to the right on small screens -->
-                    <ul class="navbar-nav ml-auto justify-content-end">
-                        <!-- Added ml-auto class and justify-content-end class -->
+                    <ul class="navbar-nav ml-auto">
+                        <!-- Align the nav links to the right -->
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link active" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="about.html">About</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="resume.html">Resume</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <br>
     </header>
 
 
 
 
-
-
-    <!--<section class="home">
-        <div class="container" style="color: aliceblue">
-            <div class="row">
-                <div class="col-md-8 offset-md-2">
-                    <br><br>
-                    <h2 class="text-center mt-5">SIDDHANT POL</h2>
-                    <p class="text-center">Mumbai, India | +91-8898666595 | siddhant.pol124@gmail.com</p>-->
-    <!-- ... (other content) ... -->
-    <!--<div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-            <h3 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Education
-                </button>
-            </h3>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                <div class="accordion-body">-->
-    <!-- Your Education content here -->
-    <!--</div>
-        </div>
-    </div>-->
-    <!-- Repeat similar structure for other sections -->
-    <!--</div>
-                </div>
-            </div>
-        </div>
-    </section>-->
-
-
-
-
-
     <section class="home">
-        <div class="container" style="color: aliceblue">
-            <div class="container" style="color: aliceblue">
+        <div class="container" style="color:darkseagreen">
+            <div class="container" style="color: darkseagreen">
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
                         <br><br>
@@ -104,56 +67,41 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <!-- Copy and paste the content from the second row here -->
-                        <div class="accordion" id="accordionExample2">
+                        <!--<div class="row">-->
+                        <div class="accordion" id="accordionExample3">
                             <div class="accordion-item">
-                                <h3 class="accordion-header" id="headingTwo">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProjects" aria-expanded="false" aria-controls="collapseProjects">
-                                        Significant Projects
+                                <h3 class="accordion-header" id="headingThree">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
+                                        Technical And Interpersonal Skills
                                     </button>
                                 </h3>
-                                <div id="collapseProjects" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample2">
+                                <div id="collapseSkills" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample3">
                                     <div class="accordion-body">
-                                        <!-- Projects content goes here -->
+                                        <!-- Skills content goes here -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--</div>-->
+                        <!--<div class="row">-->
+                        <div class="accordion" id="accordionExample4">
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingFour">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCertification" aria-expanded="false" aria-controls="collapseCertification">
+                                        Certification And Courses
+                                    </button>
+                                </h3>
+                                <div id="collapseCertification" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample4">
+                                    <div class="accordion-body">
+                                        <!-- Certification content goes here -->
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                <!--<div class="row">-->
-                    <div class="accordion" id="accordionExample3">
-                        <div class="accordion-item">
-                            <h3 class="accordion-header" id="headingThree">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
-                                    Technical And Interpersonal Skills
-                                </button>
-                            </h3>
-                            <div id="collapseSkills" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample3">
-                                <div class="accordion-body">
-                                    <!-- Skills content goes here -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                <!--</div>-->
-                <!--<div class="row">-->
-                    <div class="accordion" id="accordionExample4">
-                        <div class="accordion-item">
-                            <h3 class="accordion-header" id="headingFour">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCertification" aria-expanded="false" aria-controls="collapseCertification">
-                                    Certification And Courses
-                                </button>
-                            </h3>
-                            <div id="collapseCertification" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample4">
-                                <div class="accordion-body">
-                                    <!-- Certification content goes here -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-            </div>
         </div>
     </section>
 
