--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <h3>Software Developer</h3>
                         <p>Software Developer with a passion for creating cutting-edge applications and a focus on results. Proficient in Java, JavaScript, C#, and front-end development. Knowledgeable about using effective and clean coding practices to convert complex requirements into workable solutions. Strong analytical and problem-solving skills; good at identifying and fixing problems. Excellent communicator who works cooperatively with cross-functional teams to deliver software projects of the highest caliber. Exploring new methodologies and technologies constantly to promote innovation and improve results. Committed to providing user-centric, scalable, and maintainable software solutions.</p>
                         <div class="btn-box">
-                            <a href="#" class="btn btn-primary">Hire Me</a>
-                            <a href="#" class="btn btn-secondary">Let's Talk</a>
+                            <a href="mailto:recipient@example.com?subject=Hello%20from%20your%20website!&body=This%20is%20the%20pre-filled%20message%20content." class="btn btn-primary">Hire Me</a>
+                            <a href="mailto:recipient@example.com?subject=Hello%20from%20your%20website!&body=This%20is%20the%20pre-filled%20message%20content." class="btn btn-secondary">Let's Talk</a>
                         </div>
                     </div>
                 </div>
