--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-xl navbar-light bg-light">
             <div class="container">
                 <div class="navbar-brand">
-                    <a href="#">Portfolio.</a>
+                    <a href="index.html">Portfolio.</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                     <ul class="navbar-nav ml-auto">
                         <!-- Align the nav links to the right -->
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="resume.html">Resume</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link active" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -46,9 +46,17 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-1">
                     <div class="home-content">
-                        <h1>About Me</h1>
-                        <h3>Software Developer</h3>
-                        <p>I am a passionate software developer with a focus on creating cutting-edge applications. My skills include Java, JavaScript, C#, and front-end development. I am dedicated to using clean coding practices to transform complex requirements into effective solutions. With strong analytical and problem-solving abilities, I excel at identifying and resolving issues. As an excellent communicator, I collaborate seamlessly with cross-functional teams to deliver top-notch software projects. I am constantly exploring new methodologies and technologies to drive innovation and enhance outcomes. My commitment lies in providing user-centric, scalable, and maintainable software solutions.</p>
+                        <h1>Contact Me</h1>
+                        <h3>Get in Touch</h3>
+                        <p>If you'd like to reach out to me or discuss any opportunities, feel free to contact me. As a software developer, I'm always eager to collaborate and explore new possibilities. Whether you have a project in mind or just want to connect, I'd love to hear from you.</p>
+
+                        <h3>Contact Information</h3>
+                        <ul style="color:whitesmoke">
+                            <li>Email: <a href="mailto:siddhant.pol124@gmail.com">siddhant.pol124@gmail.com</a></li>
+                            <li>Phone: +91 8898666595</li>
+                            <li>LinkedIn: <a href="https://linkedin.com/in/sidhant-p-496705127">linkedin.com/in/siddhant-p-</a></li>
+                            <li>GitHub: <a href="https://github.com/siddhantpol">github.com/siddhantpol</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
