--- a/about.html
+++ b/about.html
@@ -15,19 +15,18 @@
         <nav class="navbar navbar-expand-xl navbar-light bg-light">
             <div class="container">
                 <div class="navbar-brand">
-                    <a href="#">Portfolio.</a>
+                    <a href="index.html">Portfolio.</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbarNav">
                     <ul class="navbar-nav ml-auto">
-                        <!-- Align the nav links to the right -->
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link " href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link active" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="resume.html">Resume</a>
