--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-xl navbar-light bg-light">
             <div class="container">
                 <div class="navbar-brand">
-                    <a href="#">Portfolio.</a>
+                    <a href="index.html">Portfolio.</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse " id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link active" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
@@ -48,10 +48,10 @@
                         <h1>Hi, I'm Siddhant Pol</h1>
                         <h3>Software Developer</h3>
                         <p>Software Developer with a passion for creating cutting-edge applications and a focus on results. Proficient in Java, JavaScript, C#, and front-end development. Knowledgeable about using effective and clean coding practices to convert complex requirements into workable solutions. Strong analytical and problem-solving skills; good at identifying and fixing problems. Excellent communicator who works cooperatively with cross-functional teams to deliver software projects of the highest caliber. Exploring new methodologies and technologies constantly to promote innovation and improve results. Committed to providing user-centric, scalable, and maintainable software solutions.</p>
-                        <div class="btn-box">
-                            <a href="mailto:recipient@example.com?subject=Hello%20from%20your%20website!&body=This%20is%20the%20pre-filled%20message%20content." class="btn btn-primary">Hire Me</a>
-                            <a href="mailto:recipient@example.com?subject=Hello%20from%20your%20website!&body=This%20is%20the%20pre-filled%20message%20content." class="btn btn-secondary">Let's Talk</a>
-                        </div>
+                        <!--<div class="btn-box">
+                            <a href="mailto:siddhant.pol124@gmail.com?subject=Hello%20from%20your%20website!&body=This%20is%20the%20pre-filled%20message%20content." class="btn btn-primary">Hire Me</a>
+                            <a href="mailto:recipient@example.com?subject=Hello%20from%20your%20website!&body=This%20is%20the%20pre-filled%20message%20content." class="btn btn-primary">Let's Talk</a>
+                        </div>-->
                     </div>
                 </div>
             </div>
