--- a/resume.html
+++ b/resume.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Siddhant Pol - Software Developer</title>
-    <link rel="stylesheet" href="resumestyle.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <!-- Add Bootstrap CSS link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -22,15 +21,14 @@
                 </button>
                 <div class="collapse navbar-collapse " id="navbarNav">
                     <ul class="navbar-nav ml-auto">
-                        <!-- Align the nav links to the right -->
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link " href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="resume.html">Resume</a>
+                            <a class="nav-link active" href="resume.html">Resume</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
@@ -44,7 +42,7 @@
 
 
 
-    <section class="home">
+    <!--<section class="home">
         <div class="container" style="color:darkseagreen">
             <div class="container" style="color: darkseagreen">
                 <div class="row">
@@ -62,14 +60,37 @@
                                 </h3>
                                 <div id="collapseEducation" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
+                                        <ul>
+                                            <li>
+                                                <p>
+                                                    <strong>Bachelor of Engineering in Computer Science</strong>
+                                                    (Ramrao Adik Institute of Technology, Navi Mumbai) | Jun 2018 - Apr 2022|Mumbai University | Average CGPA: 7.23/10 GPA
+                                                </p>
+                                            </li>
+                                            <li>
+                                                <p>
+                                                    <strong>Higher Secondary School Certificate</strong> (Swami Vivekanand Jr. College, Chembur, Mumbai) | 2016 - 2018|
+                                                    Mumbai University | Percentage: 52.6%
+                                                </p>
+                                            </li>
+                                            <li>
+                                                <p>
+                                                    <strong>Secondary School Certificate</strong> (Swami Vivekanand High School, Chembur, Mumbai) | 2008 - 2016|
+                                                    Mumbai University | Percentage: 76.4%
+                                                </p>
+                                            </li>
+                                        </ul>-->
                                         <!-- Education content goes here -->
-                                    </div>
+                                    <!--</div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
 
-                        <!--<div class="row">-->
+
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
                         <div class="accordion" id="accordionExample3">
                             <div class="accordion-item">
                                 <h3 class="accordion-header" id="headingThree">
@@ -78,14 +99,137 @@
                                     </button>
                                 </h3>
                                 <div id="collapseSkills" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample3">
-                                    <div class="accordion-body">
+                                    <div class="accordion-body">-->
                                         <!-- Skills content goes here -->
+                                    <!--</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <div class="accordion" id="accordionExample4">
+                        <div class="accordion-item">
+                            <h3 class="accordion-header" id="headingFour">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCertification" aria-expanded="false" aria-controls="collapseCertification">
+                                    Certification And Courses
+                                </button>
+                            </h3>
+                            <div id="collapseCertification" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample4">
+                                <div class="accordion-body">-->
+                                    <!-- Certification content goes here -->
+                                <!--</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>-->
+
+
+
+    <section class="home">
+        <div class="container" style="color:whitesmoke">
+            <div class="container" style="color:whitesmoke">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <br><br>
+                        <h2 class="text-center mt-5">SIDDHANT POL</h2>
+                        <p class="text-center">Mumbai, India | +91-8898666595 | siddhant.pol124@gmail.com</p>
+
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEducation" aria-expanded="false" aria-controls="collapseEducation">
+                                        Education
+                                    </button>
+                                </h3>
+                                <div id="collapseEducation" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <!-- Education content goes here -->
+                                        <ul>
+                                            <li>
+                                                <p>
+                                                    <strong>Bachelor of Engineering in Computer Science</strong>
+                                                    (Ramrao Adik Institute of Technology, Navi Mumbai) | Jun 2018 - Apr 2022|Mumbai University | Average CGPA: 7.23/10 GPA
+                                                </p>
+                                            </li>
+                                            <li>
+                                                <p>
+                                                    <strong>Higher Secondary School Certificate</strong> (Swami Vivekanand Jr. College, Chembur, Mumbai) | 2016 - 2018|
+                                                    Mumbai University | Percentage: 52.6%
+                                                </p>
+                                            </li>
+                                            <li>
+                                                <p>
+                                                    <strong>Secondary School Certificate</strong> (Swami Vivekanand High School, Chembur, Mumbai) | 2008 - 2016|
+                                                    Mumbai University | Percentage: 76.4%
+                                                </p>
+                                            </li>
+                                        </ul>
+
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!--</div>-->
-                        <!--<div class="row">-->
+                    </div>
+                </div>
+                <!-- Technical And Interpersonal skills section -->
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <div class="accordion" id="accordionExperience">
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingExperience">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExperience" aria-expanded="false" aria-controls="collapseExperience">
+                                        Technical And Interpersonal skills
+                                    </button>
+                                </h3>
+                                <div id="collapseExperience" class="accordion-collapse collapse" aria-labelledby="headingExperience" data-bs-parent="#accordionExperience">
+                                    <div class="accordion-body">
+                                        <!-- Technical And Interpersonal skills content goes here -->
+                                        <ul>
+                                            <li><strong>Backend:</strong> C#(.NET) | Java | Python</li>
+                                            <li><strong>Frontend:</strong> HTML | CSS | Photoshop</li>
+                                            <li><strong>Database:</strong> MySQL | SQL</li>
+                                        </ul>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Projects section -->
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <div class="accordion" id="accordionProjects">
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingProjects">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProjects" aria-expanded="false" aria-controls="collapseProjects">
+                                        Projects
+                                    </button>
+                                </h3>
+                                <div id="collapseProjects" class="accordion-collapse collapse" aria-labelledby="headingProjects" data-bs-parent="#accordionProjects">
+                                    <div class="accordion-body">
+                                        <!-- Projects content goes here -->
+                                        <ul>
+                                            <li><strong>Personality Prediction Through C.V. Analysis (Briggs Myers™)</strong> | Final Year Project (Mumbai University) </li>
+                                            <li><strong>Library System Management</strong>|Most Recent Project</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Certificate section -->
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
                         <div class="accordion" id="accordionExample4">
                             <div class="accordion-item">
                                 <h3 class="accordion-header" id="headingFour">
@@ -96,17 +240,23 @@
                                 <div id="collapseCertification" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample4">
                                     <div class="accordion-body">
                                         <!-- Certification content goes here -->
+                                        <ul>
+                                            <li><strong>C Language</strong> | Seed Infotech | 2023</li>
+                                            <li><strong>SQL</strong> | Seed Infotech | 2023</li>
+                                            <li><strong>C#</strong> | Seed Infotech | 2023</li>
+                                            <li><strong>Responsive Web Development</strong> | Seed Infotech | 2023</li>
+                                            <li><strong>ASP.NET</strong> | Seed Infotech | 2023</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+            </div>
         </div>
     </section>
-
-
-
 
 
 
