--- a/about.html
+++ b/about.html
@@ -47,7 +47,11 @@
                     <div class="home-content">
                         <h1>About Me</h1>
                         <h3>Software Developer</h3>
-                        <p>I am a passionate software developer with a focus on creating cutting-edge applications. My skills include Java, JavaScript, C#, and front-end development. I am dedicated to using clean coding practices to transform complex requirements into effective solutions. With strong analytical and problem-solving abilities, I excel at identifying and resolving issues. As an excellent communicator, I collaborate seamlessly with cross-functional teams to deliver top-notch software projects. I am constantly exploring new methodologies and technologies to drive innovation and enhance outcomes. My commitment lies in providing user-centric, scalable, and maintainable software solutions.</p>
+                        <p>Throughout my journey, I've been fortunate to work on various projects that have allowed me to put my skills to the test. I've built applications that harness the power of ASP.NET Core MVC, created intricate frameworks, and brought ideas to life using Java and Python. These experiences have not only expanded my technical know-how but also deepened my appreciation for the art of coding.</p>
+
+                        <p>I'm not just a developer; I'm a problem solver, a creative thinker, and a lifelong learner. I believe that the world of technology is ever-evolving, and I'm committed to staying ahead of the curve by continuously updating my skills and embracing new challenges.</p>
+
+                        <p>So, if you're seeking a dedicated software developer who can navigate the complexities of ASP.NET Core MVC, C#, Java, Python, HTML, CSS, MySQL, and SQL, you've come to the right place. Let's collaborate and build the future together through code!</p>
                     </div>
                 </div>
 
