--- a/resume.html
+++ b/resume.html
@@ -130,11 +130,12 @@
                                     <div class="accordion-body">
                                         <!-- Technical And Interpersonal skills content goes here -->
                                         <ul>
-                                            <li><strong>Backend:</strong> C#(.NET) | Java | Python</li>
-                                            <li><strong>Frontend:</strong> HTML | CSS | Photoshop</li>
-                                            <li><strong>Database:</strong> MySQL | SQL</li>
+                                            <li><strong>Programming Languages:</strong> C#, Java, Python, JavaScript</li>
+                                            <li><strong>Web Development:</strong> ASP.Net(Core,MVC,Framework), React, HTML, CSS</li>
+                                            <li><strong>Database Management:</strong> MySQL, SQL , MongoDB</li>
+                                            <li><strong>Version Control: </strong>Git</li>
+                                            <!--<li><strong>Design and Graphics:</strong> Adobe Photoshop, Adobe PremierePro</li>-->
                                         </ul>
-
                                     </div>
                                 </div>
                             </div>
@@ -156,8 +157,9 @@
                                     <div class="accordion-body">
                                         <!-- Projects content goes here -->
                                         <ul>
-                                            <li><strong>Personality Prediction Through C.V. Analysis (Briggs Myers™)</strong> | Final Year Project (Mumbai University) </li>
-                                            <li><strong>Library System Management</strong>|Most Recent Project</li>
+                                            <li><strong>Personality Prediction Through C.V. Analysis (Briggs Myers™)</strong> | Final Year Project (Mumbai University) |Utilized Briggs Myers' framework to predict personality traits from resumes, enhancing hiring processes through data-driven insights and candidate evaluation.
+                                            </li>
+                                            <li><strong>Library System Management </strong>| Efficient library system management ensures seamless book cataloging, circulation, and user-friendly access for an enhanced library experience.(Link-<a href="https://github.com/siddhantpol/ELibrary">Click Here</a>) </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -183,8 +185,10 @@
                                             <li><strong>SQL</strong> | Seed Infotech | 2023</li>
                                             <li><strong>C#</strong> | Seed Infotech | 2023</li>
                                             <li><strong>Responsive Web Development</strong> | Seed Infotech | 2023</li>
-                                            <li><strong>ASP.NET</strong> | Seed Infotech | 2023</li>
-                                        </ul>
+                                            <li><strong>ASP.NET (Framework)</strong> | Seed Infotech | 2023</li>
+                                            <li><strong>ASP.NET (Core)</strong> | Seed Infotech | 2023</li>
+                                            <li><strong>ASP.NET (Web API)</strong> | Seed Infotech | 2023</li>
+                                          </ul>
                                     </div>
                                 </div>
                             </div>
