--- a/resume.html
+++ b/resume.html
@@ -170,14 +170,14 @@
                 <!-- Certificate section -->
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
-                        <div class="accordion" id="accordionExample4">
+                        <div class="accordion" id="accordionCertificate">
                             <div class="accordion-item">
                                 <h3 class="accordion-header" id="headingFour">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCertification" aria-expanded="false" aria-controls="collapseCertification">
                                         Certification And Courses
                                     </button>
                                 </h3>
-                                <div id="collapseCertification" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample4">
+                                <div id="collapseCertification" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionCertificate">
                                     <div class="accordion-body">
                                         <!-- Certification content goes here -->
                                         <ul>
@@ -189,6 +189,33 @@
                                             <li><strong>ASP.NET (Core)</strong> | Seed Infotech | 2023</li>
                                             <li><strong>ASP.NET (Web API)</strong> | Seed Infotech | 2023</li>
                                           </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- curricular section -->
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <div class="accordion" id="accordioncurricular">
+                            <div class="accordion-item">
+                                <h3 class="accordion-header" id="headingFour">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapsecurricular" aria-expanded="false" aria-controls="collapseCertification">
+                                        Extra curricular activities
+                                    </button>
+                                </h3>
+                                <div id="collapsecurricular" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordioncurricular">
+                                    <div class="accordion-body">
+                                        <!-- Certification content goes here -->
+                                        <ul>
+                                            <li><strong>College Football Team:</strong> Served as the captain of the college football team, leading the team to victory in multiple intramural competitions.</li>
+                                            <li><strong>Photography Club:</strong> Founded and led the college photography club, organizing workshops and exhibitions to promote photography as an art form.</li>
+                                            <li><strong>Trekking Club:</strong> Actively participated in challenging trekking expeditions, fostering leadership and teamwork skills while exploring remote and scenic locations.</li>
+                                            <li><strong>Community Volunteer:</strong> Volunteered at a local non-profit organization, assisting in community events, fundraisers, and charity drives.</li>
+                                            <li><strong>Sports Tournaments:</strong> Organized and participated in various sports tournaments, promoting physical fitness and teamwork.</li>
+                                            <li><strong>Environmental Conservation:</strong> Participated in environmental conservation initiatives, including tree planting drives and beach clean-up events, contributing to a greener environment.</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
