--- a/resume.html
+++ b/resume.html
@@ -27,6 +27,10 @@
         .accordion-button:not(.collapsed):after {
             content: none; /* Remove the collapsed state indicator */
         }
+        .accordion-body{
+            background-color: #1e1d1d;
+            color: rgb(221, 225, 228);
+        }
     </style>
 </head>
 <body>
@@ -71,13 +75,13 @@
                 background-color: #168185;
             }
         </style>-->
-        <div class="container" style="color:#8df7c4">
-            <div class="container" style="color:#8df7c4">
+        <div class="container" style="color:#e3f9ee">
+            <div class="container" style="color:#e3f9ee">
                 <div class="row">
                     <div class="col-md-8 offset-md-2 ">
                         <br><br>
                         <h2 class="text-center mt-5">SIDDHANT POL</h2>
-                        <p class="text-center">Mumbai, India | +91-8898666595 | siddhant.pol124@gmail.com</p>
+                        <p class="text-center">Mumbai, India | +91-8898666595 | <a href="mailto:siddhant.pol124@gmail.com">siddhant.pol124@gmail.com</a> </p>
 
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
