--- a/about.html
+++ b/about.html
@@ -47,11 +47,11 @@
                     <div class="home-content">
                         <h1>About Me</h1>
                         <h3>Software Developer</h3>
-                        <p>Throughout my journey, I've been fortunate to work on various projects that have allowed me to put my skills to the test. I've built applications that harness the power of ASP.NET Core MVC, created intricate frameworks, and brought ideas to life using Java and Python. These experiences have not only expanded my technical know-how but also deepened my appreciation for the art of coding.</p>
+                        <p>Throughout my journey, I've been fortunate to lead and collaborate on projects that challenge conventional thinking and drive real impact. From building intricate frameworks to transforming ideas into tangible solutions, I thrive on solving complex problems and pushing boundaries.</p>
 
-                        <p>I'm not just a developer; I'm a problem solver, a creative thinker, and a lifelong learner. I believe that the world of technology is ever-evolving, and I'm committed to staying ahead of the curve by continuously updating my skills and embracing new challenges.</p>
+                        <p>I'm not just a strategist; I'm a visionary, a problem solver, and a lifelong learner. I believe that growth comes from embracing challenges, adapting to change, and inspiring others to achieve excellence.</p>
 
-                        <p>So, if you're seeking a dedicated software developer who can navigate the complexities of ASP.NET Core MVC, C#, Java, Python, HTML, CSS, MySQL, and SQL, you've come to the right place. Let's collaborate and build the future together through code!</p>
+                        <p>If you're looking for a leader who thrives on innovation, fosters collaboration, and turns challenges into opportunities, let’s <a href="contact.html">connect</a> and build a future driven by ambition and excellence!</p>
                     </div>
                 </div>
 
