new version update
submit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siddhant Pol</title>
-    <link rel="icon" type="image/png" href="1999625.png" />
+    <link rel="icon" type="image/png" href="bag.svg" />
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -41,23 +41,24 @@
         </nav>
     </header>
 
-    <section class="home">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 order-lg-1">
-                    <div class="home-content">
-                        <h1>Hi, I'm Siddhant Pol</h1>
-                        <h3>Ambitious Leader | Visionary Strategist</h3>
-                        <p>A driven and results-oriented leader, I thrive on inspiring teams to push boundaries and achieve excellence. With a sharp strategic mindset and a passion for innovation, I transform challenges into opportunities. Focused on growth, collaboration, and impactful decision-making, I am here to lead, innovate, and elevate those around me.</p>
-                        <div class="btn-box">
-                            <a href="mailto:siddhant.pol124@gmail.com?subject=Regarding%20Your%20Application%20for%20Full%20Stack%20Software%20Development%20Position&body=Dear%20Siddhant%20Pol,%0D%0A%0D%0AI%20hope%20this%20email%20finds%20you%20well.%20I%20am%20writing%20to%20express%20our%20enthusiasm%20about%20your%20application%20for%20the%20Full%20Stack%20Software%20Development%20position%20at%20our%20company.%20Your%20profile%20stood%20out%20to%20us,%20and%20we%20believe%20your%20skills%20and%20potential%20align%20perfectly%20with%20what%20we%20are%20looking%20for%20in%20a%20candidate.%0D%0A%0D%0AWe%20understand%20that%20you%20are%20embarking%20on%20your%20journey%20as%20a%20fresher%20in%20the%20field%20of%20Full%20Stack%20Software%20Development,%20and%20we%20are%20excited%20to%20offer%20you%20the%20opportunity%20to%20kick-start%20your%20career%20with%20us.%20At%20our%20company,%20we%20value%20innovation,%20collaboration,%20and%20a%20passion%20for%20technology,%20and%20we%20believe%20you%20have%20demonstrated%20these%20qualities%20in%20your%20application.%0D%0A%0D%0AAs%20a%20Full%20Stack%20Software%20Developer%20at%20our%20company,%20you%20will%20have%20the%20chance%20to%20work%20on%20cutting-edge%20projects,%20collaborate%20with%20experienced%20professionals%20in%20the%20industry,%20and%20contribute%20to%20the%20development%20of%20impactful%20solutions.%20We%20provide%20a%20supportive%20and%20dynamic%20work%20environment%20that%20encourages%20learning%20and%20growth,%20making%20it%20an%20ideal%20place%20for%20someone%20like%20you%20who%20is%20eager%20to%20learn%20and%20excel%20in%20this%20field.%0D%0A%0D%0AHere%20are%20a%20few%20key%20aspects%20of%20the%20role:%0D%0A%0D%0AFull%20Stack%20Development:%20You%20will%20have%20the%20opportunity%20to%20work%20on%20both%20front-end%20and%20back-end%20development,%20gaining%20a%20holistic%20understanding%20of%20software%20development.%0D%0A%0D%0ACollaborative%20Environment:%20Our%20team%20values%20collaboration%20and%20knowledge%20sharing.%20You'll%20have%20the%20chance%20to%20work%20closely%20with%20senior%20developers,%20designers,%20and%20project%20managers.%0D%0A%0D%0ALearning%20and%20Growth:%20We%20offer%20regular%20training%20sessions,%20workshops,%20and%20mentorship%20to%20help%20you%20continuously%20develop%20your%20skills%20and%20knowledge.%0D%0A%0D%0AInnovative%20Projects:%20You'll%20be%20involved%20in%20projects%20that%20challenge%20you%20to%20think%20creatively%20and%20develop%20solutions%20that%20make%20a%20real%20impact.%0D%0A%0D%0ATo%20move%20forward%20with%20the%20application%20process,%20we%20would%20like%20to%20invite%20you%20for%20an%20interview%20to%20discuss%20your%20skills,%20experiences,%20and%20career%20aspirations%20further.%20Please%20let%20us%20know%20your%20availability%20for%20a%20virtual%20interview,%20and%20we%20will%20do%20our%20best%20to%20accommodate%20your%20schedule.%0D%0A%0D%0ABest%20regards,%0D%0A%0D%0A[Your%20Name]
-" class="btn btn-primary">Hire Me</a>
-                        </div>
+<section class="home">
+    <div class="container">
+        <div class="row align-items-center flex-lg-row flex-column-reverse">
+            <div class="col-lg-6">
+                <div class="home-content">
+                    <h1>Hi, I'm Siddhant Pol</h1>
+                    <h3>Ambitious Leader | Visionary Strategist</h3>
+                    <p>A driven and results-oriented leader, I thrive on inspiring teams to push boundaries...</p>
+                    <div class="btn-box">
+                        <a href="blog.html" target="_blank">Blog</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
