--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                             <a class="nav-link active" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="resume.html">Resume</a>
+                            <a class="nav-link" href="blog.html">Blog.</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
