--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="resume.html">Resume</a>
+                            <a class="nav-link" href="blog.html">Blog.</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
@@ -48,10 +48,19 @@
                 <div class="home-content">
                     <h1>Hi, I'm Siddhant Pol</h1>
                     <h3>Ambitious Leader | Visionary Strategist</h3>
-                    <p>A driven and results-oriented leader, I thrive on inspiring teams to push boundaries...</p>
+                    <p id="intro-text">
+                    <span id="typed-text"></span><span id="cursor">|</span>
+                    </p>
+
+
+                    <div class="btn-container">
                     <div class="btn-box">
                         <a href="blog.html" target="_blank">Blog</a>
+                        <a href="resume.html" download>Resume</a>
                     </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
@@ -59,6 +68,30 @@
 </section>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const introText = "A driven and results-oriented leader, I thrive on inspiring teams to push boundaries...With a vision for impactful strategies and hands-on execution, I bring value by turning ideas into action and challenges into opportunities.";
+        const typedTextSpan = document.getElementById("typed-text");
+        const cursorSpan = document.getElementById("cursor");
+
+        let charIndex = 0;
+        const typingDelay = 40;
+
+        function type() {
+            if (charIndex < introText.length) {
+            typedTextSpan.textContent += introText.charAt(charIndex);
+            charIndex++;
+            setTimeout(type, typingDelay);
+            } else {
+            cursorSpan.style.display = "none";
+            seeMoreBtn.style.display = "inline";
+            }
+        }
+
+        document.addEventListener("DOMContentLoaded", type);
+    </script>
+
+
+
+
 </body>
 </html>
