--- a/resume.html
+++ b/resume.html
@@ -80,6 +80,11 @@
                 <div class="row">
                     <div class="col-md-8 offset-md-2 ">
                         <br><br>
+                        <p class="text-center">
+                        <a href="SiddhantPol.pdf" download class="plain-link">
+                            Download Resume
+                        </a>
+                        </p>
                         <h2 class="text-center mt-5">SIDDHANT POL</h2>
                         <p class="text-center">Mumbai, India | +91-8898666595 | <a href="mailto:siddhant.pol124@gmail.com">siddhant.pol124@gmail.com</a> </p>
 
